# jbuild

./: .gitignore  ARCHITECTURE.md  CHANGELOG_JAVA24.md  Cargo.toml  GRADLE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  MIGRATION.md  ORGANIZATION.md  README.md  SPEC.md  TODO.md
docs/: ARCHITECTURE_DIAGRAM.md  COMPLETION_SUMMARY.md  DDD_ARCHITECTURE.md  DDD_IMPLEMENTATION_COMPLETE.md  DDD_MIGRATION_GUIDE.md  GRADLE_LEARNINGS.md  IMPLEMENTATION_SUMMARY.md  JAVA_VERSION_SUPPORT.md  MULTI_LANGUAGE_SUPPORT.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  REFACTORING_DRY_KISS_SOC.md  SESSION_SUMMARY.md  index.html
examples/checkstyle-examples/: ComplexExample.java  ComplexSwitchExample.java  ComplexTypeNameExample.java  ComplexVariableDeclarationsExample.java  EdgeCaseLineLengthExample.java  EmptyCatchBlockExample.java  EmptyStatementExample.java  LineLengthExample.java  MissingSwitchDefaultExample.java  MultipleVariableDeclarationsExample.java  MultipleViolationsExample.java  NestedEmptyCatchExample.java  PackageNameExample.java  PackageNameValidExample.java  RedundantImportExample.java  SimplifyBooleanReturnExample.java  TypeNameExample.java  ValidCodeExample.java
examples/java24-example/: README.md  build.gradle  pom.xml
examples/multi-module-gradle/: build.gradle  settings.gradle
examples/multi-module-maven/: pom.xml
examples/simple-gradle-project/: build.gradle
examples/simple-java-project/: pom.xml
src/: cli.rs  error.rs  lib.rs  main.rs  testing_utils.rs
src/annotation/: config.rs  mod.rs  processor.rs  registry.rs
src/application/: build_orchestration.rs  dependency_management.rs  mod.rs  project_initialization.rs
src/artifact/: artifact.rs  coordinates.rs  handler.rs  mod.rs  repository.rs
src/checkstyle/: mod.rs
src/common/: mod.rs  version.rs
src/compiler/: annotation_processor.rs  classpath.rs  java_compiler.rs  kotlin.rs  mod.rs  scala.rs  source_discovery.rs
src/config/: jbuild_toml.rs  lock.rs  mod.rs  workspace.rs
src/core/: builders.rs  cache.rs  default_maven.rs  execution.rs  goal_parser.rs  graph_builder.rs  lifecycle.rs  lifecycle_executor.rs  lifecycle_starter.rs  mod.rs  mojo_executor.rs  optimization.rs  persistent_cache.rs  project.rs  project_builder.rs  reactor.rs  session.rs  traits.rs  unit_of_work.rs
src/domain/: mod.rs
src/gradle/: application_plugin.rs  composite_build.rs  configuration.rs  custom_task.rs  mod.rs  settings.rs  source_set.rs  task_graph.rs  toolchain.rs  version_catalog.rs
src/incremental/: compiler.rs  detector.rs  mod.rs  tracker.rs
src/language/: detector.rs  groovy.rs  java.rs  kotlin.rs  mod.rs  scala.rs
src/maven/: dependency_context.rs  execution_plan.rs  lifecycle_mapping.rs  mod.rs  project_dependencies_resolver.rs  reactor_build.rs
src/migration/: converter.rs  gradle_to_jbuild.rs  gradle_to_maven.rs  mod.rs  (+2 more)
tests/: annotation_processor_test.rs  ast_util_test.rs  base_check_test.rs  build_system_test.rs  check_edge_cases_test.rs  check_test.rs  cli_commands_test.rs  common_test.rs  comprehensive_example_test.rs  config_test.rs  core_test.rs  default_logger_test.rs  error_handling_test.rs  event_test.rs  example_project.rs  example_test.rs  file_test.rs  full_ident_test.rs  gradle_tests.rs  integration_test.rs  kotlin_compiler_test.rs  model_builder_tests.rs  multi_module_tests.rs  output_formatter_test.rs  parallel_resolver_test.rs  parser_test.rs  persistent_cache_test.rs  runner_test.rs  scala_compiler_test.rs  snapshot_tests.rs  tree_walker_file_set_check_test.rs  tree_walker_test.rs  unit_tests.rs  utils_test.rs  violation_test.rs  workspace_test.rs
(+177 files in other folders)
