[package]
name = "mvn-rs"
version = "0.1.0"
edition = "2021"
authors = ["mvn-rs contributors"]
license = "Apache-2.0"
repository = "https://github.com/apache/maven"

[features]
default = []
jni = ["dep:jni"]

[[bin]]
name = "mvn"
path = "src/main.rs"

[dependencies]
# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for repository access
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Path handling
pathdiff = "0.2"

# Collections
indexmap = "2.0"

# Utilities
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha1 = "0.10"
md5 = "0.7"
hex = "0.4"

# ZIP file handling for plugin JARs
zip = "0.6"

# File system utilities
walkdir = "2.4"
glob = "0.3"

# Find executables in PATH
which = "6.0"

# JNI for Java integration (optional feature)
jni = { version = "0.21", optional = true }

[dev-dependencies]
# Snapshot testing
insta = "1.38"
