[package]
name = "jbuild"
version = "0.1.3"
edition = "2024"
authors = ["Ying Kit WONG"]
license = "Apache-2.0"
homepage = "https://github.com/yingkitw/jbuild"
repository = "https://github.com/yingkitw/jbuild"
documentation = "https://docs.rs/jbuild"
description = "High-performance Java build tool supporting Maven and Gradle"
keywords = ["java", "build", "maven", "gradle", "spring-boot"]
categories = ["development-tools::build-utils", "command-line-utilities"]
readme = "README.md"

[package.metadata]
supported_jdk = ["8", "11", "17", "21"]
supported_jvm = ["openjdk", "temurin", "oraclejdk"]
supported_runtimes = ["wildfly", "jboss-eap", "websphere-traditional", "websphere-liberty", "spring-boot"]

[features]
default = []
jni = ["dep:jni"]

[[bin]]
name = "jbuild"
path = "src/main.rs"

[dependencies]
# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for repository access
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Path handling
pathdiff = "0.2"

# Collections
indexmap = "2.0"

# Utilities
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha1 = "0.10"
md5 = "0.7"
hex = "0.4"

# ZIP file handling for plugin JARs
zip = "0.6"

# File system utilities
walkdir = "2.4"
glob = "0.3"

# Find executables in PATH
which = "6.0"

# JNI for Java integration (optional feature)
jni = { version = "0.21", optional = true }

# Java parsing for checkstyle (tree-sitter)
tree-sitter = "0.20"
tree-sitter-java = "0.20"

# Logging for checkstyle
log = "0.4"
env_logger = "0.11"

# HTTP client for Maven Central search
ureq = "2.9"
urlencoding = "2.1"

# Terminal output
colored = "2.1"
indicatif = "0.17"
atty = "0.2"

# File watching
notify = "6.1"

# TOML parsing for jbuild.toml
toml = "0.8"

[dev-dependencies]
# Snapshot testing
insta = "1.38"
# Temporary directories for testing
tempfile = "3.10"
